# qollama

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  config.json  ihistoryitem.h  ihistorylist.h  ioverlaybutton.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagebox.cpp  resouces.qrc
.github/workflows/: cmake-multi-platform.yml
design/: README.md
forms/: imessagebox.ui  mainwindow.ui  messagebox.ui  userpage.ui  welcomepage.ui
images/: qollama-text.psd
models/: BashBot.json  Data-Scientist.json  Doomsday-Survivalist.json  OllamaCreate.json  Ooh-Ollama.json  adult-film-screenwriter-(nsfw).json  ai-writing-tutor.json  based-dolphin-mixtral.json  blackhat-hacker-(ollama).json  blackhat-hacker.json  chatgpt-4-uncensored.json  chloe.json  code-companion.json  codewriter.json  cyber-security-specialist.json  d&d-dungeon-master-assistant.json  deep-thought.json  devops.json  doctor.json  dolphin-mistral.json  emilio.json  emily.json  english-translator-and-improver.json  excel-sheet.json  foto-forge.json  genaiprompt.json  home-assistant-advisor.json  hussle-bot.json  image-analysis-using-llava-v5.json  lawx.json  librarian.json  linux-terminal.json  llama3-70b.json  llama3-uncensored.json  microsoft-phi-2-dolphin.json  midjourney-prompt-generator.json  multi-agent.json  psychologist.json  python-coder.json  recipe-maker.json  (+9 more)
qss/: style.qss
resources/: CMakeLists.txt  config.json.in  generator.sh  icon.icns  info.plist  qollama.rc  resouces.qrc  resources.qrc  resources.rc
resources/iconset/: icon_1024x1024.icns  icon_128x128@2x.icns  icon_16x16@2x.icns  icon_256x256.icns  icon_32x32.icns  icon_512x512@2x.icns
resources/images/: logo.psd  qollama-logo-text.psd  qollama-text.psd  qollama.psd
resources/psd/: icon.psd  qollama-text.psd
resources/qss/: style.qss
src/: chatbot.cpp  chatbot.h  chatitemdelegate.cpp  chatitemdelegate.h  document.cpp  document.h  ichatList.h  ichatitemdelegate.cpp  ichatitemdelegate.h  ichatitemmodel.cpp  ichatitemmodel.h  ichatlist.cpp  ichatwidget.cpp  ichatwidget.h  idocumentmodel.h  igallerywidget.h  ihistorylist.cpp  ihistorylist.h  ihistorymodel.h  imarketpage.cpp  imarketpage.h  imessagebox.cpp  imessagebox.h  ioverlaybutton.h  ipushcard.cpp  itestwidget.cpp  iuserpage.cpp  iuserpage.h  iwelcomebutton.cpp  iwelcomebutton.h  iwelcomepage.cpp  iwelcomepage.h  main.cpp  main.mm  mainwindow.cpp  mainwindow.h  messagebox.cpp  messagebox.h
src/buttons/: imacbuttonswidget.cpp  imacbuttonswidget.h  ioverlaybutton.cpp  ioverlaybutton.h  iwinbuttonswidget.cpp  iwinbuttonswidget.h
src/container/: IChatsScrollArea.cpp  IChatsScrollArea.h  ichatscrollarea.cpp  ichatscrollarea.h  ichatwidget.cpp  ichatwidget.h  igallerywidget.cpp  igallerywidget.h  ihistorylist.cpp  ihistorylist.h  iscrollarea.cpp  iscrollarea.h  iwidget.cpp  iwidget.h
src/display/: iautoresizetextbrowser.cpp  iautoresizetextbrowser.h  igptswidget.cpp  igptswidget.h  ihpushcard.cpp  ihpushcard.h  imessagebox.cpp  imessagebox.h  ipushcard.cpp  ipushcard.h  ititlebar.cpp  ititlebar.h  ivpushcard.cpp  ivpushcard.h
src/input/: ilineedit.cpp  ilineedit.h  inavigetrorbar.cpp  inavigetrorbar.h
src/network/: Python_wrapper.h  chatbot.cpp  client.cpp  client.h  webscraperbridge.cpp  webscraperbridge.h
src/objects/: configmanager.cpp  configmanager.h  dataloader.cpp  dataloader.h  iconfigmanager.cpp  iconfigmanager.h  imageloader.cpp  imageloader.h  initializer.cpp  initializer.h  isignalhub.cpp  isignalhub.h  istylemanager.cpp  istylemanager.h  signalhub.cpp  signalhub.h  stylemanager.cpp  stylemanager.h
src/pages/: ichatspage.cpp  ichatspage.h  ileftwindow.cpp  ileftwindow.h  imarketpage.cpp  imarketpage.h  imodelspage.cpp  imodelspage.h  irightwindow.cpp  irightwindow.h  isettingpage.cpp  isettingpage.h  isidearea.cpp  isidearea.h  iwelcomepage.cpp  iwelcomepage.h  mainwindow.cpp  mainwindow.h
src/scripts/: requirements.txt  webscraper.py
src/tests/: itestwidget.cpp  itestwidget.h
tests/: CMakeLists.txt  testasio.cpp  testqstring.cpp
